# project-templates

./: .gitignore  .prettierrc.json  LICENSE  README.md
project-folder/: CMakeLists.txt  example.tex  package.json
project-folder/src/: index.js
src/: main.c
